# agent_protocol_splitter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_macos.yml  build_ubuntu.yml  codeql-analysis.yml  main.yaml
debian/: changelog  control  copyright  rules
include/: protocol_splitter.hpp
src/: protocol_splitter.cpp
test/: README.md  mav_reader.py  mavlink_reader.py  rtps_reader.py  test_protocol_splitter.sh
